--- a/src/main/resources/fxml/Calendar.fxml
+++ b/src/main/resources/fxml/Calendar.fxml
@@ -11,25 +11,25 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="730.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.sumdu.j2se.kryshtop.tasks.controller.CalendarController">
+<Pane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="410.0" prefWidth="724.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.sumdu.j2se.kryshtop.tasks.controller.CalendarController">
    <children>
       <Label layoutX="14.0" layoutY="14.0" text="Period of Time: " wrapText="true" />
       <Label layoutX="14.0" layoutY="43.0" text="from" wrapText="true" />
       <DatePicker layoutX="50.0" layoutY="39.0" prefHeight="25.0" prefWidth="111.0" />
       <Label layoutX="173.0" layoutY="43.0" text="to" wrapText="true" />
       <DatePicker layoutX="191.0" layoutY="39.0" prefHeight="25.0" prefWidth="119.0" />
-      <Button fx:id="showButton" layoutX="357.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Show" />
-      <Button fx:id="backButton" layoutX="633.0" layoutY="384.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Back" />
-      <TableView layoutX="14.0" layoutY="73.0" prefHeight="329.0" prefWidth="451.0">
+      <Button fx:id="showButton" layoutX="359.0" layoutY="39.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Show" />
+      <Button fx:id="backButton" layoutX="636.0" layoutY="384.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="83.0" text="Back" />
+      <TableView fx:id="calendarTable" layoutX="14.0" layoutY="73.0" prefHeight="329.0" prefWidth="451.0">
         <columns>
-          <TableColumn prefWidth="186.99999237060547" text="Time" />
-          <TableColumn editable="false" prefWidth="263.0" text="Title" />
+          <TableColumn fx:id="timeColumn" prefWidth="172.00001525878906" text="Time" />
+          <TableColumn fx:id="titleColumn" editable="false" prefWidth="278.0" text="Title" />
         </columns>
       </TableView>
-       <GridPane layoutX="476.0" layoutY="99.0" prefHeight="173.0" prefWidth="247.0">
+       <GridPane layoutX="476.0" layoutY="99.0" prefHeight="173.0" prefWidth="243.0">
            <columnConstraints>
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="121.0" minWidth="10.0" prefWidth="93.0" />
-               <ColumnConstraints hgrow="SOMETIMES" maxWidth="154.0" minWidth="10.0" prefWidth="154.0" />
+               <ColumnConstraints hgrow="SOMETIMES" maxWidth="147.0" minWidth="10.0" prefWidth="86.0" />
+               <ColumnConstraints hgrow="SOMETIMES" maxWidth="217.0" minWidth="10.0" prefWidth="157.0" />
            </columnConstraints>
            <rowConstraints>
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
@@ -38,8 +38,8 @@
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
            </rowConstraints>
-           <children><Label text="Title" /><Label fx:id="firstNameLabel" GridPane.columnIndex="1" /><Label text="(Start) Time" GridPane.rowIndex="1" /><Label text="End time" GridPane.rowIndex="2" /><Label layoutX="22.0048828125" layoutY="150.0" text="Activity" GridPane.rowIndex="4" /><Label fx:id="lastNameLabel" GridPane.columnIndex="1" GridPane.rowIndex="1" /><Label fx:id="streetLabel" GridPane.columnIndex="1" GridPane.rowIndex="2" /><Label text="Repeat interval" GridPane.rowIndex="3" /><Label fx:id="cityLabel" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-               <CheckBox disable="true" mnemonicParsing="false" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
+           <children><Label text="Title" /><Label fx:id="titleLabel" text="_" GridPane.columnIndex="1" /><Label text="(Start) Time" GridPane.rowIndex="1" /><Label text="End time" GridPane.rowIndex="2" /><Label layoutX="22.0048828125" layoutY="150.0" text="Activity" GridPane.rowIndex="4" /><Label fx:id="startTimeLabel" text="_" GridPane.columnIndex="1" GridPane.rowIndex="1" /><Label fx:id="endTimeLabel" text="_" GridPane.columnIndex="1" GridPane.rowIndex="2" /><Label text="Repeat interval" GridPane.rowIndex="3" /><Label fx:id="intervalLabel" text="_" GridPane.columnIndex="1" GridPane.rowIndex="3" />
+               <CheckBox fx:id="activityCheckBox" disable="true" mnemonicParsing="false" selected="true" GridPane.columnIndex="1" GridPane.rowIndex="4" />
            </children>
        </GridPane>
       <Label layoutX="546.0" layoutY="73.0" text="Details" wrapText="true" />
