--- a/src/main/resources/fxml/Main.fxml
+++ b/src/main/resources/fxml/Main.fxml
@@ -1,29 +1,24 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
-<?import javafx.scene.control.Label?>
-<?import javafx.scene.control.TableColumn?>
-<?import javafx.scene.control.TableView?>
-<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="427.0"
-            prefWidth="893.0" xmlns="http://javafx.com/javafx/8.0.76-ea" xmlns:fx="http://javafx.com/fxml/1"
-            fx:controller="ua.sumdu.j2se.kryshtop.tasks.controller.MainController">
-    <Label layoutX="7.0" layoutY="14.0" text="Tasks:" wrapText="true"/>
-    <TableView fx:id="mainTable" layoutX="8.0" layoutY="39.0" prefHeight="350.0" prefWidth="876.0">
-      <columns>
-          <TableColumn fx:id="activityColumn" prefWidth="20.0" text="A"/>
-          <TableColumn fx:id="titleColumn" prefWidth="260.0" text="Title"/>
-          <TableColumn fx:id="startTimeColumn" prefWidth="171.0" text="(Start) Time"/>
-          <TableColumn fx:id="endTimeColumn" prefWidth="169.0" text="End time"/>
-          <TableColumn fx:id="intervalColumn" prefWidth="254.0" text="Interval"/>
-      </columns>
-    </TableView>
-    <Button fx:id="addNewTaskButton" layoutX="8.0" layoutY="395.0" mnemonicParsing="false" prefHeight="25.0"
-            prefWidth="160.0" text="Add new task"/>
-    <Button fx:id="calendarButton" layoutX="748.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0"
-            prefWidth="131.0" text="Calendar"/>
-    <Button fx:id="deleteButton" layoutX="828.0" layoutY="395.0" mnemonicParsing="false" text="Delete"/>
-    <Button fx:id="editButton" layoutX="770.0" layoutY="395.0" mnemonicParsing="false" prefHeight="25.0"
-            prefWidth="50.0" text="Edit"/>
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" prefHeight="427.0" prefWidth="893.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="ua.sumdu.j2se.kryshtop.tasks.controller.MainController">
+       <Label layoutX="7.0" layoutY="14.0" text="Tasks:" wrapText="true" AnchorPane.leftAnchor="7.0" AnchorPane.topAnchor="14.0" />
+       <TableView fx:id="mainTable" layoutX="8.0" layoutY="39.0" prefHeight="350.0" prefWidth="876.0" AnchorPane.bottomAnchor="38.0" AnchorPane.leftAnchor="8.0" AnchorPane.rightAnchor="8.0" AnchorPane.topAnchor="39.0">
+         <columns>
+             <TableColumn fx:id="activityColumn" maxWidth="20.0" minWidth="20.0" prefWidth="20.0" text="A" />
+             <TableColumn fx:id="titleColumn" minWidth="260.0" prefWidth="260.0" text="Title" />
+             <TableColumn fx:id="startTimeColumn" minWidth="170.0" prefWidth="170.0" text="(Start) Time" />
+             <TableColumn fx:id="endTimeColumn" minWidth="170.0" prefWidth="170.0" text="End time" />
+             <TableColumn fx:id="intervalColumn" minWidth="255.0" prefWidth="255.0" text="Interval" />
+         </columns>
+         <columnResizePolicy>
+            <TableView fx:constant="CONSTRAINED_RESIZE_POLICY" />
+         </columnResizePolicy>
+       </TableView>
+       <Button fx:id="addNewTaskButton" layoutX="8.0" layoutY="395.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="160.0" text="Add new task" AnchorPane.bottomAnchor="7.0" AnchorPane.leftAnchor="7.0" />
+       <Button fx:id="calendarButton" layoutX="748.0" layoutY="10.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="131.0" text="Calendar" AnchorPane.rightAnchor="14.0" AnchorPane.topAnchor="10.0" />
+       <Button fx:id="deleteButton" layoutX="828.0" layoutY="395.0" mnemonicParsing="false" text="Delete" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="14.0" />
+       <Button fx:id="editButton" layoutX="770.0" layoutY="395.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="50.0" text="Edit" AnchorPane.bottomAnchor="7.0" AnchorPane.rightAnchor="72.0" />
 </AnchorPane>
